--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_002.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "VWACTF_001";
+    ViewBag.Title = "ACTF_002";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
