--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CajaReportes/CAJ_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CajaReportes/CAJ_001.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "VWINV_001";
+    ViewBag.Title = "CAJ_001";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
