intentando que funcione el webdocument viewer

--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
@@ -43,7 +43,8 @@
     <script src="~/AdminLTE/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
     <script src="~/Scripts/moment.min.js"></script>
 
-
+    <link href="~/Content/DevExpress/jquery-ui.css" rel="stylesheet" />
+    <link href="~/Content/DevExpress/jquery-ui.min.css" rel="stylesheet" />
     <script src="~/Scripts/Devexpress/ace.js"></script>
     <script src="~/Scripts/Devexpress/cldr.js"></script>
     <script src="~/Scripts/Devexpress/currency.js"></script>
