--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/VWROL_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/VWROL_001.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Web.Reportes.RRHH.VWROL_001_Rpt
+﻿
 @{
-    ViewBag.Title = "VWROL_001";
+    ViewBag.Title = "ROL_001";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
