--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/Nuevo.cshtml
@@ -8,6 +8,8 @@
 }
 @using (Html.BeginForm("Nuevo", "CategoriaAF", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
