--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
@@ -1,4 +1,5 @@
-﻿@model Core.Erp.Info.Helps.cl_filtros_Info
+﻿
+@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "INV_003";
@@ -54,6 +55,8 @@
                     </div>
                 </div>
             </div>
+
+
         </div>
         <!-- /.box-body -->
     </div>
