--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
@@ -87,3 +87,15 @@
         <!-- /.box-footer-->
     </div>    
 }
+<script>
+    $(function () {
+        //Date picker
+        $('#fecha_ini').datepicker({
+            autoclose: true
+        })
+
+        $('#fecha_fin').datepicker({
+            autoclose: true
+        })
+    });
+</script>
