--- a/ERP/Core.Erp.Web/Areas/General/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
     <div class="wrapper">
         <header class="main-header">
             <!-- Logo -->
-            <a href="@Url.Action("Index","Home")" class="logo">
+            <a href="@Url.Action("Index","Home",new { Area = ""})" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>FX</b></span>
                 <!-- logo for regular state and mobile devices -->
