--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/Modificar.cshtml
@@ -22,13 +22,14 @@
                    settings.Name = "IdActivoFijoTipo";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("CodActivoFijo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("IdActivoFijoTipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
                    settings.Properties.Columns.Add("Af_Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
                    //Campo ID
-                   settings.Properties.ValueField = "CodActivoFijo";
+                   settings.Properties.ValueField = "IdActivoFijoTipo";
                    settings.Properties.ValueType = typeof(int);
                    settings.Properties.TextField = "Af_Descripcion";
                    settings.Properties.NullText = "== Seleccione ==";
+
                    settings.Properties.DropDownButton.Enabled = false;
                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                    settings.ReadOnly = true;
