--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
@@ -8,7 +8,7 @@
         Response.Redirect("~/Account/Login");
     }
 }
-@using (Html.BeginForm("INV_003","InventarioReportes", FormMethod.Post, new { @class = "form", @role = "form"}))
+@using (Html.BeginForm("INV_003", "InventarioReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     <div class="box collapsed-box">
         <div class="box-header with-border">
@@ -27,39 +27,85 @@
             </div>
         </div>
         <div class="box-body">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="">Fecha inicio*</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
-                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+            <!-- /.box-body -->
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha inicio*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
                             </div>
+                            @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
+                            @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="">Fecha fin*</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
-                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha fin*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
                             </div>
+                            @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
+                            @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
             </div>
-
-
         </div>
-        <!-- /.box-body -->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="IdSucursal">Sucursal</label>
+                        @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                        @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="IdBodega">Bodega</label>
+                        @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega" })
+                        @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="IdCategoria">Categoría</label>
+                        @Html.DropDownListFor(q => q.IdCategoria, new SelectList(ViewBag.lst_categoria, "IdCategoria", "ca_Categoria"), new { @class = "form-control", @id = "IdCategoria" })
+                        @Html.ValidationMessageFor(q => q.IdCategoria, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="IdLinea">Línea</label>
+                        @Html.DropDownListFor(q => q.IdLinea, new SelectList(ViewBag.lst_linea, "IdLinea", "nom_linea"), new { @class = "form-control", @id = "IdLinea" })
+                        @Html.ValidationMessageFor(q => q.IdLinea, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="dGrupo">Grupo</label>
+                        @Html.DropDownListFor(q => q.IdGrupo, new SelectList(ViewBag.lst_grupo, "dGrupo", "nom_grupo"), new { @class = "form-control", @id = "dGrupo" })
+                        @Html.ValidationMessageFor(q => q.IdGrupo, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="IdSubGrupo">Subgrupo</label>
+                        @Html.DropDownListFor(q => q.IdSubGrupo, new SelectList(ViewBag.lst_subgrupo, "IdSubGrupo", "nom_subgrupo"), new { @class = "form-control", @id = "IdSubGrupo" })
+                        @Html.ValidationMessageFor(q => q.IdSubGrupo, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <div class="box">
         <div class="box-header with-border">
