--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
@@ -27,82 +27,85 @@
             </div>
         </div>
         <div class="box-body">
-            <!-- /.box-body -->
-        </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="IdSucursal">Sucursal</label>
+                            @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                            @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="IdBodega">Bodega</label>
+                            @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega" })
+                            @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Fecha inicio*</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
-                            @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="IdCategoria">Categoría</label>
+                            @Html.DropDownListFor(q => q.IdCategoria, new SelectList(ViewBag.lst_categoria, "IdCategoria", "ca_Categoria"), new { @class = "form-control", @id = "IdCategoria" })
+                            @Html.ValidationMessageFor(q => q.IdCategoria, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="IdLinea">Línea</label>
+                            @Html.DropDownListFor(q => q.IdLinea, new SelectList(ViewBag.lst_linea, "IdLinea", "nom_linea"), new { @class = "form-control", @id = "IdLinea" })
+                            @Html.ValidationMessageFor(q => q.IdLinea, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="dGrupo">Grupo</label>
+                            @Html.DropDownListFor(q => q.IdGrupo, new SelectList(ViewBag.lst_grupo, "IdGrupo", "nom_grupo"), new { @class = "form-control", @id = "dGrupo" })
+                            @Html.ValidationMessageFor(q => q.IdGrupo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="IdSubGrupo">Subgrupo</label>
+                            @Html.DropDownListFor(q => q.IdSubGrupo, new SelectList(ViewBag.lst_subgrupo, "IdSubgrupo", "nom_subgrupo"), new { @class = "form-control", @id = "IdSubGrupo" })
+                            @Html.ValidationMessageFor(q => q.IdSubGrupo, "", new { @class = "text-danger" })
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Fecha fin*</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
-                            @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
-                        </div>
+            </div><div class="row">
+    <div class="col-md-12">
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="">Fecha inicio*</label>
+                <div class="input-group date">
+                    <div class="input-group-addon">
+                        <i class="fa fa-calendar"></i>
                     </div>
+                    @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
+                    @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="IdSucursal">Sucursal</label>
-                        @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal" })
-                        @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="">Fecha fin*</label>
+                <div class="input-group date">
+                    <div class="input-group-addon">
+                        <i class="fa fa-calendar"></i>
                     </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="IdBodega">Bodega</label>
-                        @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega" })
-                        @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="IdCategoria">Categoría</label>
-                        @Html.DropDownListFor(q => q.IdCategoria, new SelectList(ViewBag.lst_categoria, "IdCategoria", "ca_Categoria"), new { @class = "form-control", @id = "IdCategoria" })
-                        @Html.ValidationMessageFor(q => q.IdCategoria, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="IdLinea">Línea</label>
-                        @Html.DropDownListFor(q => q.IdLinea, new SelectList(ViewBag.lst_linea, "IdLinea", "nom_linea"), new { @class = "form-control", @id = "IdLinea" })
-                        @Html.ValidationMessageFor(q => q.IdLinea, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="dGrupo">Grupo</label>
-                        @Html.DropDownListFor(q => q.IdGrupo, new SelectList(ViewBag.lst_grupo, "dGrupo", "nom_grupo"), new { @class = "form-control", @id = "dGrupo" })
-                        @Html.ValidationMessageFor(q => q.IdGrupo, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="IdSubGrupo">Subgrupo</label>
-                        @Html.DropDownListFor(q => q.IdSubGrupo, new SelectList(ViewBag.lst_subgrupo, "IdSubGrupo", "nom_subgrupo"), new { @class = "form-control", @id = "IdSubGrupo" })
-                        @Html.ValidationMessageFor(q => q.IdSubGrupo, "", new { @class = "text-danger" })
-                    </div>
+                    @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
+                    @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+            <!-- /.box-body -->
         </div>
     </div>
 
@@ -143,5 +146,136 @@
         $('#fecha_fin').datepicker({
             autoclose: true
         })
+        cargar_lineas();
+        cargar_grupos();
+        cargar_subgrupos();
     });
+    $("#IdSucursal").change(function () {
+        cargar_bodega();
+    });
+    $("#IdCategoria").change(function () {
+        cargar_lineas();
+        cargar_grupos();
+        cargar_subgrupos();
+    });
+    function cargar_bodega() {
+
+        var sucursal = $("#IdSucursal").val();
+
+        var datos = {
+            IdSucursal: sucursal
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_bodega", "InventarioReporte", new { Area = "Reportes" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+                $.each(data, function (i, row) {
+                    $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
+    function cargar_lineas() {
+        $("#IdLinea").empty();
+        $("#IdGrupo").empty();
+        $("#IdSubGrupo").empty();
+
+        var categoria = $("#IdCategoria").val();
+
+        var datos = {
+            IdCategoria: categoria
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_lineas", "InventarioReporte", new { Area = "Reportes" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+                $.each(data, function (i, row) {
+                    $("#IdLinea").append("<option value=" + row.IdLinea + ">" + row.nom_linea + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
+
+    function cargar_grupos() {
+        $("#IdGrupo").empty();
+        $("#IdSubGrupo").empty();
+
+        var categoria = $("#IdCategoria").val();
+        var linea = $("#IdLinea").val();
+
+        var datos = {
+            IdCategoria: categoria,
+            IdLinea: linea
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_grupos", "InventarioReporte", new { Area = "Reportes" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+                $.each(data, function (i, row) {
+                    $("#IdGrupo").append("<option value=" + row.IdGrupo + ">" + row.nom_grupo + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
+    function cargar_subgrupos() {
+        $("#IdSubGrupo").empty();
+
+        var categoria = $("#IdCategoria").val();
+        var linea = $("#IdLinea").val();
+        var grupo = $("#IdGrupo").val();
+
+        var datos = {
+            IdCategoria: categoria,
+            IdLinea: linea,
+            IdGrupo: grupo
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_subgrupos", "InventarioReporte", new { Area = "Reportes" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdSubGrupo").append("<option value=" + row.IdSubgrupo + ">" + row.nom_subgrupo + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
 </script>
