--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
@@ -85,7 +85,14 @@
         settings.Columns.Add("em_codigo","Código").Width=Unit.Percentage(5);
         settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(5);
         settings.Columns.Add("Empleado","Nombres").Width=Unit.Percentage(15);
-        settings.Columns.Add("em_fechaIngaRol", "Fecha ing.").Width = Unit.Percentage(4);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "em_fechaIngaRol";
+            column.Caption = "Ingresi";
+            column.Width = Unit.Percentage(8);
+            column.PropertiesEdit.DisplayFormatString = "d";
+
+        });
         settings.Columns.Add(column =>
         {
 
@@ -104,23 +111,6 @@
             });
         });
 
-        settings.Columns.Add(column =>
-        {
-
-            column.Caption = "Visualizar";
-            column.Name = "Visualizar";
-            //  settings.FormatConditions.AddColorScale("cargas", GridConditionColorScaleFormat.BlueWhiteRed);
-            column.Width = Unit.Percentage(4);
-            column.SetDataItemTemplateContent(container =>
-            {
-                Html.DevExpress().HyperLink(hyperlink =>
-                {
-                    var keyValue = DataBinder.Eval(container.DataItem, "IdEmpleado");
-                    hyperlink.Properties.Text = "mas info.";
-                    hyperlink.NavigateUrl = Url.Action("Consulta", "Empleado", new { IdEmpleado = keyValue });
-                }).Render();
-            });
-        });
 
     });
 }
