--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
@@ -147,6 +147,39 @@
         settings.Columns.Add("Cerrado","Cerrado").Width = Unit.Percentage(5);
         settings.Columns.Add("Contabilizado","Contabilizado").Width = Unit.Percentage(8);
 
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "#";
+            column.Width = Unit.Pixel(100);
+            column.SetDataItemTemplateContent(container =>
+            {
+                    Html.DevExpress().HyperLink(hyperlink =>
+                    {
+                        var IdNomina_Tipo = DataBinder.Eval(container.DataItem, "IdNomina_Tipo");
+                        var IdNomina_TipoLiqui = DataBinder.Eval(container.DataItem, "IdNomina_TipoLiqui");
+                        var IdPeriodo = DataBinder.Eval(container.DataItem, "IdPeriodo");
+                        hyperlink.Properties.Text = "Rol gen.";
+                        hyperlink.NavigateUrl = Url.Action("ROL_001", "RRHHReportes", new { IdNomina_Tipo = IdNomina_Tipo, IdNomina_TipoLiqui = IdNomina_TipoLiqui, IdPeriodo = IdPeriodo });
+                    }).Render();
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "#";
+            column.Width = Unit.Pixel(100);
+            column.SetDataItemTemplateContent(container =>
+            {
+                  Html.DevExpress().HyperLink(hyperlink =>
+                    {
+                        var IdNomina_Tipo = DataBinder.Eval(container.DataItem, "IdNomina_Tipo");
+                        var IdNomina_TipoLiqui = DataBinder.Eval(container.DataItem, "IdNomina_TipoLiqui");
+                        var IdPeriodo = DataBinder.Eval(container.DataItem, "IdPeriodo");
+                        hyperlink.Properties.Text = "rol. indv.";
+                        hyperlink.NavigateUrl = Url.Action("ROL_002", "RRHHReportes", new { IdNomina_Tipo = IdNomina_Tipo, IdNomina_TipoLiqui = IdNomina_TipoLiqui, IdPeriodo = IdPeriodo });
+                    }).Render();
+            });
+        });
+
 
     });
 }
