--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Anular.cshtml
@@ -10,8 +10,38 @@
 
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdPeriodo">Periodo*</label>
+                    @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodo, "IdPeriodo", "nom_periodo_combo"), new { @class = "form-control", @id = "IdPeriodo" , @disabled = "disabled" });
+                    @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="Cod_Depreciacion">Código</label>
+                    @Html.TextBoxFor(q => q.Cod_Depreciacion, new { @class = "form-control" });
+                    @Html.ValidationMessageFor(q => q.Cod_Depreciacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-offset-5 col-md-2">
+                <div class="form-group">
+                    <label for="Cod_Depreciacion">Fecha*</label>
+                    @Html.TextBoxFor(q => q.Fecha_Depreciacion, new { @class = "form-control", @id = "Fecha_Depreciacion" });
+                    @Html.ValidationMessageFor(q => q.Fecha_Depreciacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
-                @Html.Action("GridViewPartial_depreciacion_det")
+                <div class="form-group">
+                    <label for="Descripcion">Observación</label>
+                    @Html.TextAreaFor(q => q.Descripcion, new { @class = "form-control", @rows = 3 });
+                    @Html.ValidationMessageFor(q => q.Descripcion, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
@@ -20,7 +50,24 @@
         <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index", "DepreciacionAF", new { Area = "ActivoFijo" }, null)">Cancelar</a>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                @Html.Action("GridViewPartial_depreciacion_det")
+            </div>
+        </div>
+    </div>
+    
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+<script>
+    $(function () {
+        //Date picker
+        $('#Fecha_Depreciacion').datepicker({
+            autoclose: true
+        })
+    });
+</script>
