--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Nuevo.cshtml
@@ -12,7 +12,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdPeriodo">Periodo*</label>
-                    @Html.TextBoxFor(q => q.IdPeriodo, new { @class = "form-control", @id = "IdPeriodo" });
+                    @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodo,"IdPeriodo", "nom_periodo_combo"), new { @class = "form-control", @id = "IdPeriodo" });
                     @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
                 </div>
             </div>
