--- a/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
@@ -146,6 +146,7 @@
                             <li><a href="@Url.Action("Index","RevalorizacionActivo",new { area = "ActivoFijo"})"><i class="fa fa-circle-o"></i>Revalorización</a></li>
                             <li><a href="@Url.Action("Index","VentaActivo",new { area = "ActivoFijo"})"><i class="fa fa-circle-o"></i>Venta</a></li>
                             <li><a href="@Url.Action("Index","RetiroActivo",new { area = "ActivoFijo"})"><i class="fa fa-circle-o"></i>Retiro</a></li>
+                            <li><a href="@Url.Action("Index","DepreciacionAF",new { area = "ActivoFijo"})"><i class="fa fa-circle-o"></i>Depreciación</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
