--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
@@ -10,6 +10,7 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdActivoFijo)
+    @Html.HiddenFor(q => q.Estado_Proceso);
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-2">
